--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - run: 
           name: Compile code
           command: swift build
+          no_output_timeout: 30m
       - run: 
           name: Run unit tests
           command: swift test
