--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,12 @@ jobs:
       - image: swift:4.2
     steps:
       - checkout
+      - run:
+          name: Pull Dependencies
+          command: swift package resolve
       - run: 
           name: Compile code
           command: swift build
-          no_output_timeout: 30m
       - run: 
           name: Run unit tests
           command: swift test
