--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 
-use_docker: &use_docker setup_remote_docker
+- &use_docker setup_remote_docker
 
-quay_login: &quay_login
+- &quay_login
   run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
 
-only_tagged: &only_tagged
+- &only_tagged
   filters:
     branches:
       ignore:
