--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,10 @@
 version: 2.1
 
-references:
-  - &only_tagged
-    filters:
-      branches:
-        ignore:
-        - /^.*$/
-      tags:
-        only:
-        - /^.*$/
-
 commands:
   quay_login:
     steps:
       - run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
-    
+
 
 jobs:
   test:
@@ -43,9 +33,10 @@ jobs:
       image: ubuntu-1604:201903-01
     steps:
       - quay_login 
-      - run:
-          name: Deploy image
-          command: make install
+      - run: echo "Success"
+      # - run:
+      #     name: Deploy image
+      #     command: make install
 
 workflows:
   version: 2
@@ -55,8 +46,16 @@ workflows:
           context: babylon
       - build:
           context: babylon
-          requires: [test]
+          requires: 
+            - test
       - deploy:
           context: babylon
-          <<: *only_tagged
-          requires: [build]
+          requires: 
+            - build
+          filters:
+            # branches:
+            #   ignore:
+            #     - /.*/
+            tags:
+              only:
+                - /.*/
