Small test to ensure tags trigger CI - 2nd attempt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,9 @@ workflows:
           requires: 
             - build
           filters:
-            # branches:
-            #   ignore:
-            #     - /.*/
+            branches:
+              ignore:
+                - /.*/
             tags:
               only:
                 - /.*/
