--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,8 @@ workflows:
           requires: 
             - build
           filters:
-            branches:
-              ignore:
-                - /.*/
+            # branches:
+            #   ignore:
+            #     - /.*/
             tags:
-              only:
-                - /.*/
+              only: /^v.*/
