[IOSP-178] Ensure tags deploy the docker image (#29)
* Ensure tags deploy the docker image

* Naming is hard - the sequel

* Apply suggestions from code review

Olivier was too excited 😄

Co-Authored-By: Olivier Halligon <olivier.halligon@babylonhealth.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,25 @@
 version: 2.1
 
 references:
-  - &only_tagged
+  - &on_branches_and_tags
+    filters:
+      tags:
+        only: 
+          - /.*/
+  - &on_tags_only
     filters:
       branches:
         ignore:
-        - /^.*$/
+        - /.*/
       tags:
         only:
-        - /^.*$/
+        - /.*/
 
 commands:
   quay_login:
     steps:
       - run: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
-    
+
 
 jobs:
   test:
@@ -49,14 +54,17 @@ jobs:
 
 workflows:
   version: 2
+
   test-build-deploy:
     jobs:
       - test:
           context: babylon
+          <<: *on_branches_and_tags
       - build:
           context: babylon
           requires: [test]
+          <<: *on_branches_and_tags
       - deploy:
           context: babylon
-          <<: *only_tagged
           requires: [build]
+          <<: *on_tags_only
