Build Docker image to ensure everything looks good

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,12 @@ jobs:
       - run:
           name: Run unit tests
           command: swift test
+      - run:
+          name: Login in quay.io
+          command: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
+      - run:
+          name: Build image
+          command: make build
 
   deploy:
     machine:
