--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ references:
 jobs:
   test:
     docker:
-      - image: swift:5.0
+      - image: vapor/swift:5.0
     steps:
       - checkout
       - run:
