Check if the docker image is building

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,15 @@ jobs:
           name: Run unit tests
           command: swift test
 
+  build-image:
+    machine:
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: Login in quay.io
+          command: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
+
   deploy:
     machine:
       image: ubuntu-1604:201903-01
@@ -47,6 +56,9 @@ workflows:
   test-n-deploy:
     jobs:
       - test:
+          context: babylon
+          <<: *on_branches_and_tags
+      - build-image:
           context: babylon
           <<: *on_branches_and_tags
       - deploy:
