[IOSP-169] Upgrade to Swift 5 (#23)
* Upgrade to Swift 5

* Build Docker image to ensure everything looks good

* Update dockerfile to use a Swift 5.0 image

* Change to the vapor image

* Downgrade the version of CryptoSwift.git

* Move to Swift 5.1 because why not

* Forgot about some files ofc

* Test if CryptoSwift is the guilty one

* Restore CryptoSwift

This reverts commit cf7022bf7fd604309cb0375402dc74d773caf263.

* Increase logging

* Let's see if we can build the image

* Let's put Docker at rest for now

* Let's do it the old way (and let's hope openssl is installed)

* Bring docker back and reduce # of jobs

* Import FoundationNetworking

* Include the missing imports

* Remove extra logging

* Remove warning

* Update dockerfile

* Check if the docker image is building

* Include missing step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,27 @@ references:
 jobs:
   test:
     docker:
-      - image: swift:4.2
+       - image: vapor/swift:5.1
     steps:
       - checkout
       - run:
           name: Compile code
-          command: swift build
+          command: swift build --jobs 1
       - run:
           name: Run unit tests
           command: swift test
+
+  build-image:
+    machine:
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: Login in quay.io
+          command: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}" quay.io
+      - run:
+          name: Deploy image
+          command: make build
 
   deploy:
     machine:
@@ -47,6 +59,9 @@ workflows:
   test-n-deploy:
     jobs:
       - test:
+          context: babylon
+          <<: *on_branches_and_tags
+      - build-image:
           context: babylon
           <<: *on_branches_and_tags
       - deploy:
